bk_ida/gccida/c3/invalidate
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/cse.c:2303:26: error: must use 'enum' tag to refer to type 'machine_mode'
void  invalidate( rtx x, machine_mode full_mode) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/cse.c:2309:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/cse.c:2375:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode data; // [rsp+8h] [rbp-40h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/cse.c:2471:33: error: use of undeclared identifier 'machine_mode'
LOBYTE( v16) = canon_hash( x, ( machine_mode)BYTE2( v3)); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/cse.c:2677:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v36 = ( ( unsigned int)( mode_class_0[v35] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/cse.c:2899:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v69 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v68] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate/src/obj/cse.o] Error 1
